--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.app.matiasandco.beer.ScrollingActivity"
-    tools:showIn="@layout/bares">
+    tools:showIn="@layout/activity_scrolling">
 
     <TextView
         android:layout_width="wrap_content"
